Fixed z-index issue with nice menus

--- a/sites/all/themes/scf_theme/css/global.css
+++ b/sites/all/themes/scf_theme/css/global.css
@@ -235,8 +235,13 @@ nav {
 
 ul.nice-menu,
 ul.nice-menu ul {
-  	z-index: 10;
+  	z-index: 10 !important;
 }
+
+ul.nice-menu li.menuparent ul {
+  overflow: visible !important;
+}
+
 
 ul.nice-menu-down li.menuparent,
 ul.nice-menu-down li.menuparent:hover  {
@@ -310,12 +315,16 @@ ul.nice-menu-down ul li.menuparent > a:after {
 }
 
 #block-nice-menus-2 {
+  margin-top: 3%;
   padding-bottom: 20px;
+  z-index: 0 !important;
+}
 }
 
 ul#nice-menu-2 {
-  z-index: 4;
+  z-index: 0 !important;
 }
+
 
 #nice-menu-2 ul {
     list-style-type: none;
